--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>
 <a id="what-does-it-do-" class="anchor" href="#what-does-it-do-" aria-hidden="true"><span class="octicon octicon-link"></span></a>What does it do ?</h1>
 
-<p>It is your own personal electronic butler like in the Iron Man movies for your Linux desktop. </p>
+<p>It is your own personal electronic butler like in the Iron Man movies for your Linux desktop :-) </p>
 
 <h1>
 <a id="status" class="anchor" href="#status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Status</h1>
