--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@ Jump right in and see the contents below :-)
 <h1>
 <a id="status" class="anchor" href="#status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Status</h1>
 
+<b>ATTENTION:</b> Due to some errors in (some) scenarios the compilation of own accustic models is broken atm. I'm working on a fix.<br><br>
+
 <ul>
 <li>
 <p>Pretty good model is online, secarios and scripts can be made.</p>
