--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Jump right in and see the contents below :-)
 <h1>
 <a id="status" class="anchor" href="#status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Status</h1>
 
-<b>ATTENTION:</b> Due to some errors in (some) scenarios the compilation of own accustic models is broken atm. I'm working on a fix.<br><br>
+<b>ATTENTION:</b> Due to some errors in (some) scenarios the compilation of own accustic models is broken atm. I'm working on a fix. 25/10/15<br><br>
 
 <ul>
 <li>
