--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ Jump right in and see the contents below :-)
 <a href="install.html" >1. Start the installation</a><br>
 <a href="config.html" >2. Basic Configuration of Simon</a><br>
 <a href="install_modules.html" >3. Install some Linjark-Modules</a><br>
-<a href="#goal" >4. Some things you should know</a><br>
-<a href="#goal" >5. How to train properly</a><br>
+<a href="knowledge.html" >4. Some things you should know</a><br>
+<a href="train.html" >5. How to train properly</a><br>
 6. Have a blast!<br>
 
 <a href="#goal" >Aim of this project</a><br>
@@ -120,7 +120,7 @@ Jump right in and see the contents below :-)
 <h1>
 <a id="status" class="anchor" href="#status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Status</h1>
 
-<b>ATTENTION:</b> Due to some errors in (some) scenarios the compilation of own accustic models is broken atm. I'm working on a fix. 25/10/15<br><br>
+<b>ATTENTION:</b> Due to some errors in (some) scenarios the compilation of own acoustic models is broken atm. Also some modules are broken too. I'm working on a fix. 25/10/15<br><br>
 
 <ul>
 <li>
