--- a/train.html
+++ b/train.html
@@ -20,43 +20,22 @@
 
     <section class="main-content">
 
-<a href="config.html"> << go_back</a> 
+<a href="knowledge.html"> << go_back</a> 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a  href="index.html"> -Main Site-</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="knowledge.html"> >> Some things to know </a>
 
       <h1>
-<a id="what-does-it-do-" class="anchor" href="#what-does-it-do-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install Linjark modules </h1>
+<a id="what-does-it-do-" class="anchor" href="#what-does-it-do-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to train properly with Simon </h1>
 
 <p>
 
-Go into the modules folder on Github and download the module you want.<br>
-<br>
-
-<a href="https://github.com/ManuGithubSteam/LinJarK/tree/master/modules">https://github.com/ManuGithubSteam/LinJarK/tree/master/modules</a>
-
-<br><br>
-Then extract it in your <i>Home</i> folder. The scripts will be automatically installed into the right folder.
-<br><br>
-<code>tar xvf MODULE.tar.gz</code>
-<br><br>
-Open up Simon and click on "<i>Manage Scenarios</i>" -> "<i>Open</i>" -> "<i>Import from file</i>" then import the <i>"SOMETHING.scenario"</i> file from your HOME folder.
-<br><br>
-<i>Check if there is a <b>README</b> file in your HOME folder and read it !</i><br><br>
-Just read it!!
 
 
 
  </p>
- 
- <a href="config.html"> << go_back</a> 
+<a href="knowledge.html"> << go_back</a> 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a  href="index.html"> -Main Site-</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="knowledge.html"> >> Some things to know </a>
-
-
 
       <h1>
 
