--- a/knowledge.html
+++ b/knowledge.html
@@ -24,7 +24,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a  href="index.html"> -Main Site-</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="train.html"> >> Train properly</a>
+<a href="train.html"> >> How to train properly / Common errors </a>
 
       <h1>
 <a id="what-does-it-do-" class="anchor" href="#what-does-it-do-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Some things to know </h1>
@@ -121,7 +121,7 @@ Copy the API Key (and only the API KEY) and paste it into a bash terminal with t
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a  href="index.html"> -Main Site-</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="train.html"> >> Train properly</a>
+<a href="train.html"> >> How to train properly / Common errors</a>
 
       <h1>
 
