--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ Currently supported:<br>
 - Dictating an Email with Thunderbird -> eg: If your hands are full<br>
 - Controlling Mypaint -> eg: Use your voice to select different brush sizes while you draw with your hands.<br>
 - and many more....<br>
+<br>
+For an in detail view what you can do, look into the <a href="https://github.com/ManuGithubSteam/LinJarK/raw/master/linjark_grammar3.ods">grammar file of Linjark</a>
 
  </p>
       <h1>
