--- a/install_modules.html
+++ b/install_modules.html
@@ -46,7 +46,15 @@ Open up Simon and click on "<i>Manage Scenarios</i>" -> "<i>Open</i>" -> "<i>Imp
 <i>Check if there is a <b>README</b> file in your HOME folder and read it !</i><br><br>
 Just read it!!
 
+<h1>Info</h1>
 
+Simon does prioritize the scenarios from the top down. <br>
+<br>
+That means, the first scenario gets checked first, if the sentence does not match it checks the second one and so forth. <br>
+If it does match, there is no further check!<br>
+
+<br>
+So the placement of the scenarios is also an important point to consider.
 
  </p>
  
