--- a/install.html
+++ b/install.html
@@ -47,7 +47,9 @@ First we will download the linjark script, that in turn will download and instal
 
 <h4>Dependencies:</h4>
 
-Linkajrk depends on the following programs to function properly. Please install the necessary packages.<br>
+For <i>Marry</i> to work, you need a function install of <b>Oracle</b> latest Java! (nothing else is tested)
+
+Linkajrk also depends on the following programs to function properly. Please install the necessary packages.<br>
 
 wmctrl, xdotool, html-xml-utils, kdialog, sox, xclip<br>
 
