--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Jump right in and see the contents below :-)
 <h1>
 <a id="status" class="anchor" href="#status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Status</h1>
 
-<b>ATTENTION:</b> Due to some errors in (some) scenarios the compilation of own acoustic models is broken atm. Also some modules are broken too. I'm working on a fix. 25/10/15<br><br>
+<b>ATTENTION:</b> Aome modules are broken due to old age. Look for the most recent ones in the Github folder. I'm working on fixing the rest. 25/10/15<br><br>
 
 <ul>
 <li>
