--- a/install.html
+++ b/install.html
@@ -12,10 +12,8 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Linjark</h1>
-      <h2 class="project-tagline">Getting easy speechrecognition/voicecontrol to the average Linux Desktop users</h2>
+      <h2 class="project-tagline">Getting easy speechrecognition/voicecontrol to the average Linux desktop users</h2>
       <a href="https://github.com/ManuGithubSteam/LinJarK" class="btn">View on GitHub</a>
-      <a href="https://github.com/ManuGithubSteam/LinJarK/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/ManuGithubSteam/LinJarK/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
@@ -47,7 +45,7 @@ First we will download the linjark script, that in turn will download and instal
 
 <h4>Dependencies:</h4>
 
-For <i>Marry</i> to work, you need a function install of <b>Oracle</b> latest Java! (nothing else is tested)
+For <i>Marry</i> to work, you need a function install of <b>Oracle</b> latest Java! (nothing else is tested)<br><br>
 
 Linkajrk also depends on the following programs to function properly. Please install the necessary packages.<br>
 
