--- a/knowledge.html
+++ b/knowledge.html
@@ -12,10 +12,9 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Linjark</h1>
-      <h2 class="project-tagline">Getting easy speechrecognition/voicecontrol to the average Linux Desktop users</h2>
+      <h2 class="project-tagline">Getting easy speechrecognition/voicecontrol to the average Linux desktop users</h2>
       <a href="https://github.com/ManuGithubSteam/LinJarK" class="btn">View on GitHub</a>
-      <a href="https://github.com/ManuGithubSteam/LinJarK/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/ManuGithubSteam/LinJarK/tarball/master" class="btn">Download .tar.gz</a>
+  
     </section>
 
     <section class="main-content">
