--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@ If you don't believe it look into the code :-)
 <h1>
 <a id="how-does-all-this-work-" class="anchor" href="#how-does-all-this-work-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How does all this work ?</h1>
 
-<p>When you speak in your microphone, Simon, an open source speech recognition program is comparing your recorded speech with the data (words) 
-in the language model, if it finds the words in the model, it can understand you. Then it will launch some scripts according to what you say eg. 
+<p>When you speak in your microphone, Simon, an open source speech recognition program is comparing your recorded voice with the data 
+in the language model, if it finds the words in the model in the correct grammatical order, it can understand you if you trained it. 
+Then it will launch some scripts according to what you say eg. 
 check the weather for you. MarryTTS is then used to answer you (default: in German) with synthesized speech and display the requested information 
 with the scripts.</p>
 
