--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@ If you don't believe it look into the code :-)
 <a id="how-does-all-this-work-" class="anchor" href="#how-does-all-this-work-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How does all this work ?</h1>
 
 <p>When you speak in your microphone, Simon, an open source speech recognition program is comparing your recorded voice with the data 
-in the language model, if it finds the words in the model in the correct grammatical order, it can understand you if you trained it. 
+in the language model, if it finds the words in the model in the correct grammatical order, it can understand you if you trained it. <br><br>
 Then it will launch some scripts according to what you say eg. 
-check the weather for you. MarryTTS is then used to answer you (default: in German) with synthesized speech and display the requested information 
-with the scripts.</p>
+check the weather for you. MarryTTS is then used to answer you with synthesized speech and display the requested information or read it back to you.</p>
 
 This looks then something like this:<br><br>
 
@@ -92,8 +91,7 @@ model with the words you need to control something for it.</strong></p>
 
 <p>Till now this is not really an easy task, mostly because the open source <strong>German</strong> language model does not support the right words 
 for controlling applications and devices. But also because their are not many scenarios written for Simon and scripts to implement things in an 
-easy way or another program who would scan the pocketsphinx output and launch some stuff (at least of that I know of).
- <strong>This project will change that!</strong></p>
+easy way.
 
 Jump right in and see the contents below :-)
 
