--- a/index.html
+++ b/index.html
@@ -116,8 +116,21 @@ Jump right in and see the contents below :-)
 <a href="#gpl" >License</a><br>
 <h1>
 <a id="status" class="anchor" href="#status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Status</h1>
+<hr>
 
-<b>ATTENTION:</b> Some modules are broken due to old age. Look for the most recent ones in the Github folder. I'm working on fixing the rest. 25/10/15<br><br>
+
+25/10/15 <b>ATTENTION:</b> Some modules are broken due to old age. Look for the most recent ones in the Github folder.
+ I'm working on fixing the rest. <br>
+
+
+<hr>
+
+
+<p>21/10/15 This project is considered (again) active in development and not stable or bugfree!</p>
+
+
+<hr>
+
 
 <ul>
 <li>
@@ -127,6 +140,12 @@ Jump right in and see the contents below :-)
 <li>The current model has many words for controlling and getting information of various sources.</li>
 </ul>
 </li>
+
+
+</ul>
+<hr><ul>
+
+
 <li>
 <p>As Google Speech API v2 now requires personal keys, these modules will (for now) not work out of the box:</p>
 
@@ -137,8 +156,8 @@ Jump right in and see the contents below :-)
 </li>
 </ul>
 
+<hr>
 
-<p>This project is considered (again) active in development and not stable or bugfree!</p>
 
 
 
