--- a/install.html
+++ b/install.html
@@ -43,9 +43,9 @@ First we will download the linjark script, that in turn will download and instal
  install Simon from your distribution repository (or compile it yourself).
 <h2>Installation of linjark</h2>
 
-<h4>Dependencies:</h4>
+For <i>Marry</i> to work, you need a function install of <b>Oracle</b> latest Java! (nothing else is tested)
 
-For <i>Marry</i> to work, you need a function install of <b>Oracle</b> latest Java! (nothing else is tested)<br><br>
+<h3>Dependencies:</h3>
 
 Linkajrk also depends on the following programs to function properly. Please install the necessary packages.<br>
 
