--- a/knowledge.html
+++ b/knowledge.html
@@ -97,6 +97,9 @@ You can do it but it will be not as good as if you would speak the whole sentenc
  Also this can lead to strange SPHINX errors (who are ignored, to a certain extend but if they are to much, sphinx just crashes!)!
  
  <br>
+ <hr>
+While a new model is compiling, no speech-recognition is possible, even if the "<i>Activated</i>" button is pressed, it just does 
+not work while the compilation is in progress.
  
  <h1>What is the GOOGLE API key ?</h1>
 
