--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@ Jump right in and see the contents below :-)
 <h1>
 <a id="trouble" class="anchor" href="#trouble-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Trouble ?</h1>
 
+First look here: <a href="train.html#cerrors" id="#cerrors">Common Problems</a> <br>
+Next look here: <a href="errors.html">More errors you could encounter</a> <br>
+<br>
+
+If this is not helping, open an issue here on github.
+
 <p>As this is for the German model I do obviously speak German and you can use that language if you contact me :-)</p>
 
 <p><a href="https://github.com/ManuGithubSteam/LinJarK/issues" target="_blank">Please open a "Issue" here on github with a
