--- a/train.html
+++ b/train.html
@@ -24,7 +24,8 @@
 <a  href="index.html"> -Main Site-</a>
 
       <h1>
-<a id="what-does-it-do-" class="anchor" href="#what-does-it-do-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to train properly with Simon </h1>
+<a id="what-does-it-do-" class="anchor" href="#what-does-it-do-" aria-hidden="true">
+<span class="octicon octicon-link"></span></a>How to train properly with Simon </h1>
 
 <p>
 
@@ -51,19 +52,28 @@ for a successful recompilation of the speech model and clogs up you pc.<br>
 <br><br>
 Have fun with your new model.
 
-<h1>Common Errors</h1>
-
+   <h1>
+<a id="cerrors" class="anchor" href="#cerrors" aria-hidden="true">
+<span class="octicon octicon-link"></span></a>Common Errors</h1>
 Ever seen this after a recompile of the model: <br>
 
-<img src="gramer_error.png" width="464" height="454" alt="">
+<img src="error_grammar.png" width="464" height="454" alt="">
 
 <br>
 
 <b><ins>Reason:</ins></b> <br>
-<br>
+
 The reason for this is, that the grammar from a scenario can not be understood by Simon/SHPINX. The grammar structure gets more complicated with each added scenario. <br>
  <br>
-To solve this, <b>remove the scenario</b> in question and if it is a scenario from here, <b><a href="https://github.com/ManuGithubSteam/LinJarK/issues" target="_blank">write a bugreport!</a></b>
+ 
+ <b><ins>Solution:</ins></b> <br>
+ 
+To solve this, <b>remove the scenario</b> with the wrong grammar and if it is a scenario from here, <b><a href="https://github.com/ManuGithubSteam/LinJarK/issues" target="_blank">write a bugreport!</a></b>
+<hr>
+This is one of the most common errors for end-users, however there are more possible ones you can observe in the wild. <br>
+
+<a href="errors.html">More possible errors are listed here.
+</a>
 
 </ul>
 
