--- a/errors.html
+++ b/errors.html
@@ -19,7 +19,7 @@
 
     <section class="main-content">
       
-<a href="install_modules.html"> << go_back</a> 
+<a href="install_modules.html"> << go_back</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a  href="index.html"> -Main Site-</a>
 <h1>
@@ -110,9 +110,43 @@ Most likely you are out of space in <i>/tmp</i>.
 Remove files from <i>/tmp</i> or reboot.
 
 
+<hr>
 
-<br><br>
-<a href="install_modules.html"> << go_back</a> 
+<img src="server_dissconnect.png" width="441" height="231" alt="">
+
+<br> <br>
+
+This happens in the middle of an active listening session.
+<br>
+<b><ins>Reason:</ins></b> <br>
+
+Unknown.
+ <br>
+  <br>
+ <b><ins>Solution:</ins></b> <br>
+
+Just reconnect.
+
+<hr>
+
+<br> <br>
+
+<ins><b>Problem:</b></ins><br>
+You started an active listening session and all is working well so far. All of a sudden,Simon does not recognize anything anymore.
+
+<br> <br>
+<b><ins>Reason:</ins></b> <br>
+Most likely a failure with initializing your mic for listening.
+
+ <br>
+  <br>
+ <b><ins>Solution:</ins></b> <br>
+
+Restart Simon.
+
+
+<hr>
+<a href="install_modules.html"> << go_back</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a  href="index.html"> -Main Site-</a>
 
