--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@ Jump right in and see the contents below :-)
 <a id="status" class="anchor" href="#status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Status</h1>
 <hr>
 
+07/11/15 <b>ATTENTION:</b> Priorities are shifting. <a href="objectives.html">Read more here.</a> <br>
+
+
+<hr>
 
 25/10/15 <b>ATTENTION:</b> Some modules are broken due to old age. Look for the most recent ones in the Github folder.
  I'm working on fixing the rest. <br>
