--- a/install.html
+++ b/install.html
@@ -49,9 +49,9 @@ For <i>Marry</i> to work, you need a function install of <b>Oracle</b> latest Ja
 
 Linkajrk also depends on the following programs to function properly. Please install the necessary packages.<br>
 
-wmctrl, xdotool, html-xml-utils, kdialog, sox, xclip<br>
+wmctrl, xdotool, html-xml-utils, kdialog, sox, xclip, curl<br>
 
-<code>wmctrl xdotool html-xml-utils kdialog sox xclip</code>
+<code>wmctrl xdotool html-xml-utils kdialog sox xclip curl</code>
 
 <br><br>
 <i><b>NOTE:</b> Some modules maybe need additional software to function.</i>
